# forge-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  UPGRADING.md  install  pyproject.toml  sync_templates.py
.github/workflows/: ci.yml  e2e.yml  mutmut.yml  plugin-e2e.yml  ty-upgrade.yml
.github/workflows/scripts/: mutmut_enforce.py
docs/: FEATURES.md  MAINTAINER_ONBOARDING.md  WINDOWS_DEV.md  architecture.md  coverage-policy.md  mcp.md  mutation-testing.md  plugin-development.md  troubleshooting.md
docs/architecture-decisions/: ADR-001-pragmatic-hexagonal.md  ADR-002-ports-and-adapters.md
docs/rfcs/: README.md  RFC-001-versioning-branching.md  RFC-002-breaking-change-contract.md  RFC-003-package-naming.md  RFC-007-error-contract.md  RFC-008-config-loading.md  RFC-009-service-registration.md  RFC-010-domain-modelling.md
examples/forge-plugin-example/: README.md  pyproject.toml
examples/forge-plugin-example/src/forge_plugin_example/: __init__.py
examples/forge-plugin-example/src/forge_plugin_example/fragments/hello_banner/python/: inject.yaml
examples/forge-plugin-example/src/forge_plugin_example/fragments/hello_banner/python/files/: hello.py
forge/: __init__.py  __main__.py  api.py  capability_resolver.py  cli.py  common_files.py  config.py  docker_manager.py  doctor.py  e2e_templates.py  errors.py  feature_injector.py  forge_toml.py  fragment_context.py  fragments.py  frontends.py  generator.py  logging.py  merge.py  middleware_spec.py  options.py  plan_update.py  plan_validator.py  plugins.py  provenance.py  sentinel_audit.py  strippers.py  updater.py  updater_lock.py  variable_mapper.py
forge/appliers/: __init__.py  deps.py  env.py  files.py  injection.py  pipeline.py  plan.py
forge/cli/: __init__.py  builder.py  completion.py  interactive.py  loader.py  main.py  parser.py
forge/cli/commands/: __init__.py  add_backend.py  canvas.py  describe.py  list.py  migrate.py  new_entity.py  plan.py  plan_update.py  plugins.py  preview.py  remove_fragment.py  schema.py  update.py
forge/codegen/: __init__.py  canvas_contract.py  enums.py  pipeline.py  ui_protocol.py
forge/config/: __init__.py  _backend.py  _frontend.py  _project.py  _validators.py
forge/domain/: __init__.py  emitters.py  spec.py  typespec.py
forge/features/: __init__.py
forge/features/agent/: __init__.py  fragments.py  options.py
forge/features/async_work/: __init__.py  fragments.py
forge/features/conversation/: __init__.py  fragments.py  options.py
forge/features/middleware/: __init__.py  fragments.py  options.py
forge/features/object_store/: __init__.py  fragments.py  options.py
forge/features/observability/: __init__.py  fragments.py  options.py
forge/features/platform/: __init__.py  fragments.py  options.py
forge/features/rag/: __init__.py  fragments.py  options.py
forge/features/reliability/: __init__.py  fragments.py  options.py
forge/features/security/: __init__.py  fragments.py  options.py
forge/fragments/: __init__.py  _registry.py  _spec.py  agent.py  async_work.py  llm.py  middleware.py  object_store.py  observability.py  platform.py  queue.py  rag.py  reliability.py  security.py  vector_store.py
forge/injectors/: __init__.py  python_ast.py  sentinels.py  ts_ast.py
forge/migrations/: __init__.py  base.py  migrate_adapters.py  migrate_adopt_baseline.py  migrate_entities.py  migrate_layer_modes.py  migrate_rename_options.py  migrate_ui_protocol.py
forge/options/: __init__.py  _registry.py  _schema.py  async_work.py  chat.py  conversation.py  layers.py  middleware.py  platform_ops.py  rag.py
forge/services/: __init__.py  builtin.py  fragment_compose.py  registry.py
forge/templates/: Dockerfile.node.j2  docker-compose.yml.j2  init-db.sh  init-db.sh.j2  keycloak-realm.json.j2
forge/templates/_common/: ci_python.yml  editorconfig  gitignore  pre-commit-config.yaml
forge/templates/_domain/: items.yaml
forge/templates/deploy/: docker-compose.yml.j2
forge/templates/flutter-frontend-template/: copier.yml
forge/templates/node-service-template/: copier.yml
forge/templates/python-service-template/: .gitignore  README.md  copier.yml
forge/templates/rust-service-template/: copier.yml
forge/templates/svelte-frontend-template/: copier.yml
forge/templates/vue-frontend-template/: copier.yml
forge/toolchains/: node.py  python.py  rust.py
scripts/: install.ps1  install.sh
tests/: test_backend_mode_none.py  test_canvas_contract.py  test_capability_resolver.py  test_cli_completion.py  test_cli_coverage.py  test_cli_flags.py  test_cli_functions.py  test_cli_helpers_ws4.py  test_codegen_pipeline.py  test_common_files.py  test_config.py  test_coverage_config.py  test_coverage_gates.py  test_database_mode_none.py  test_database_strip_python.py  test_docker_lifecycle.py  test_docker_manager.py  test_docker_smoke.py  test_doctor.py  test_domain_spec.py  test_e2e_scenarios.py  test_e2e_templates.py  test_enum_codegen.py  test_feature_injector.py  test_file_three_way_merge.py  test_forge_logging.py  test_forge_toml.py  test_fragment_compose.py  test_fragment_context.py  test_fragment_parity_at_construction.py  test_fragment_registry_freeze.py  test_frontend_layouts.py  test_frontend_mode.py  test_generator.py  test_generator_failures.py  test_golden_snapshots.py  test_headless.py  test_long_path_update.py  test_mcp_audit.py  test_mcp_client.py  (+30 more)
tests/appliers/: test_fragment_plan.py  test_pipeline.py
tests/e2e/: conftest.py  test_full_generation.py
tests/fixtures/ty_canary/: README.md  inference_generic_protocol_ok.py  inference_typed_dict_ok.py  rule_invalid_argument_type_err.py  rule_invalid_argument_type_ok.py  rule_invalid_return_type_err.py  rule_invalid_return_type_ok.py  rule_missing_argument_err.py  rule_missing_argument_ok.py  rule_unknown_argument_err.py  rule_unknown_argument_ok.py  rule_unresolved_import_err.py  rule_unresolved_import_ok.py
tests/fuzz/: test_fragment_combinations.py
tests/golden/snapshots/: full_feature.json  multi_backend.json  (+3 more)
tests/matrix/: smoke_contract.py
(+844 files in other folders)
