[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "1.0.0a5.dev0"
description = "CLI tool to generate and orchestrate full-stack projects."
requires-python = ">=3.11"
dependencies = [
    "copier>=9.0.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "tomlkit>=0.14.0",
    "libcst>=1.8.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyyaml>=6.0",
    "ruff>=0.7.0",
    "ty>=0.0.1a7",
    "pre-commit>=3.7.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.setuptools.package-data]
"forge.templates" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
markers = [
    "e2e: end-to-end tests that scaffold a project and run its native test suite (slow, opt-in via -m e2e)",
]

[tool.coverage.run]
source = ["forge"]
omit = [
    "forge/templates/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"


# Mutation testing via mutmut. Scoped to the fragment-injection critical
# path (feature_injector, merge, provenance, injectors/) where silent
# regressions would bite generated projects on every `forge --update`.
# Run with `uvx mutmut run` and inspect with `uvx mutmut results`.
[tool.mutmut]
paths_to_mutate = [
    "forge/feature_injector.py",
    "forge/merge.py",
    "forge/provenance.py",
    "forge/injectors/python_ast.py",
    "forge/injectors/ts_ast.py",
    "forge/updater.py",
]
tests_dir = "tests/"
runner = "uv run pytest -x --no-cov -q"
# Skip mutations inside lexical strings — template snippets / error
# messages / docstrings changing doesn't change behavior forge depends on.
also_copy = ["tests/"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["forge"]
exclude = ["forge/templates", "**/__pycache__", "**/.venv"]

[tool.ty.rules]
unresolved-import = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"
unknown-argument = "error"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "forge/templates",
    ".venv",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in argument default — common in argparse helpers
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
