[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "1.0.0"
description = "CLI tool to generate and orchestrate full-stack projects."
requires-python = ">=3.11"
dependencies = [
    "copier>=9.0.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "tomlkit>=0.14.0",
    "libcst>=1.8.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyyaml>=6.0",
    "ruff>=0.7.0",
    # ty is pinned to an exact alpha until a ty-upgrade PR lands (Epic X).
    # Astral ships breaking changes between alphas (the 0.0.1a7 in the old
    # `>=` constraint didn't even know about `[tool.ty.src].include`); a
    # passing canary run is the precondition for bumping this pin. See
    # .github/workflows/ty-upgrade.yml and tests/test_ty_canary.py for the
    # upgrade dance.
    "ty==0.0.29",
    "pre-commit>=3.7.0",
    "hypothesis>=6.152.2",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.setuptools.package-data]
"forge.templates" = ["**/*"]

# Epic DD (1.1.0-alpha.1) — keep wheel's forge/templates/ clean. The
# `**/*` include above is generous so fragments can ship any file type;
# this companion exclude drops caches + build output that occasionally
# accumulate in the live working tree. Keep in sync with MANIFEST.in.
[tool.setuptools.exclude-package-data]
"forge.templates" = [
    "**/__pycache__/*",
    "**/.mypy_cache/*",
    "**/.ruff_cache/*",
    "**/.pytest_cache/*",
    "**/node_modules/*",
    "**/.venv/*",
    "**/htmlcov/*",
    "**/.next/*",
    "**/.svelte-kit/*",
    "**/.dart_tool/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
markers = [
    "e2e: end-to-end tests that scaffold a project and run its native test suite (slow, opt-in via -m e2e)",
    "package_integrity: assert the uv-built sdist + wheel contain every template file and no cache contamination (slow, opt-in via -m package_integrity; CI runs as a separate job)",
    "fuzz: Hypothesis-driven fuzz tests for resolver combinations (slower, opt-in via -m fuzz; CI runs nightly)",
]
filterwarnings = [
    # Epic S (1.1.0-alpha.1): internal modules still import GeneratorError
    # while the rename to ForgeError migrates through. Silencing here keeps
    # the test suite quiet without masking external callers — third-party
    # code still sees the deprecation when they import.
    "ignore:forge\\.errors\\.GeneratorError is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["forge"]
omit = [
    "forge/templates/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Project-wide floor (Epic S, 1.1.0-alpha.1). Measured baseline at the start
# of Epic S was 83.5% — the original 75 figure is honest and actively being
# met; the roadmap's 26% number was stale. The gate stays at 75 as the
# coarse safety net. Finer-grained critical-path floors live in
# `tests/test_coverage_gates.py`; those are the ones that bite when someone
# touches merge / provenance / feature_injector / the injectors.
#
# Policy: each sprint's coverage PR ratchets the critical-path floors upward
# toward the targets in docs/coverage-policy.md. Lowering any floor requires
# a CHANGELOG note + RFC-002 justification.
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"


# Mutation testing via mutmut. Scoped to the fragment-injection critical
# path (feature_injector, merge, provenance, injectors/) where silent
# regressions would bite generated projects on every `forge --update`.
# Run with `uvx mutmut run` and inspect with `uvx mutmut results`.
[tool.mutmut]
paths_to_mutate = [
    "forge/feature_injector.py",
    "forge/merge.py",
    "forge/provenance.py",
    "forge/injectors/python_ast.py",
    "forge/injectors/ts_ast.py",
    "forge/updater.py",
]
tests_dir = "tests/"
runner = "uv run pytest -x --no-cov -q"
# Skip mutations inside lexical strings — template snippets / error
# messages / docstrings changing doesn't change behavior forge depends on.
also_copy = ["tests/"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["forge"]
exclude = ["forge/templates", "**/__pycache__", "**/.venv"]

[tool.ty.rules]
unresolved-import = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"
unknown-argument = "error"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "forge/templates",
    ".venv",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in argument default — common in argparse helpers
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
